SD-2799 Failed check runs no longer preventing sandbox load (again)